<resources>
    <string name="app_name">TWG</string>
    <string name="login">Login</string>

    <!--    textField header-->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>

    <!--    textField hint text-->
    <string name="first_name_hint">Your First Name</string>
    <string name="last_name_hint">Your Last Name</string>
    <string name="email_hint">Your Email</string>
    <string name="password_hint">Your Password</string>

    <!--    button-->
    <string name="remember">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign up</string>
    <string name="Continue">Continue</string>

    <!--    other text-->
    <string name="or_continue">or continue with</string>
    <string name="dont_have_acct">Don\'t have account?</string>
    <string name="already_have_acct">Already signed up?</string>
    <string name="facebook_icon">FaceBook Icon</string>
    <string name="google_icon">Google Icon</string>
    <string name="linkedin_icon">Linkedin Icon</string>
    <string name="terms_agreement">By signing up you agree to our</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="lower_and">and</string>
    <string name="privacy_policy">Privacy Policy</string>



</resources>