<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingTop="28dp"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_gravity="center_horizontal"
        >

        <ImageView
            android:id="@+id/icBackArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:gravity="start"
            android:clickable="true"
            android:src="@drawable/baseline_arrow_back_24"
            android:scaleType="fitStart"
            app:tint="@color/icon_primary"
            android:focusable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/poppins_semibold"
            android:includeFontPadding="false"
            android:textAppearance="@style/header"
            android:text="@string/sign_up" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/first_name"
            android:layout_marginTop="36dp"
            android:textAppearance="@style/textFieldHeader"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="6dp"
            android:id="@+id/signup_edt_first_name"
            app:hintEnabled="false"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name_hint"
                android:inputType="textPersonName"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/last_name"
            android:layout_marginTop="18dp"
            android:textAppearance="@style/textFieldHeader"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="6dp"
            android:id="@+id/signup_edt_last_name"
            app:hintEnabled="false"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name_hint"
                android:inputType="textPersonName"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/email"
            android:layout_marginTop="18dp"
            android:textAppearance="@style/textFieldHeader"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="6dp"
            android:id="@+id/signup_edt_email"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/baseline_email_24"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_hint"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/password"
            android:layout_marginTop="18dp"
            android:textAppearance="@style/textFieldHeader"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="6dp"
            android:id="@+id/signup_edt_password"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/baseline_lock_24"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_hint"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="18dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_agreement"
                />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/btnLogin"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:backgroundTint="@color/primary_color"
            android:text="@string/Continue"
            android:textSize="14sp"
            android:textColor="@color/text_primary"
            android:fontFamily="@font/poppins_semibold"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="bottom|center_horizontal"
            android:gravity="bottom|center_horizontal"
            android:layout_weight="1"
            android:paddingBottom="40dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textPlaceholder"
                android:text="@string/already_have_acct"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtBtnSignup"
                android:clickable="true"
                android:focusable="true"
                android:textAllCaps="false"
                android:layout_marginStart="5dp"
                android:textAppearance="@style/textButton"
                android:text="@string/login"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>